src/test/deca/context/valid/created/objet/heritage.deca
// Description :
// test de verification redefinition de methode
//
// Resultats :
// ok

class A {
    int x;
    void init(){
       int y = 0 ;
    }

}

class B extends A {
    int y ;
    void init(){
        int y = 1 ;
    }

}