src/test/deca/context/invalid/created/objet/heritage_override.deca
// Description :
//      Utilisation du decorateur Override
// Resultat
//      Ligne 16 : Redefinition d'une methode avec une signature differente

class A {
    int x;
    void init(){
        x = 0 ;
    }

}

class B extends A {
    int y ;
    void init(int x){
        y = 1 ;
    }

}